# Edge_detector_Assignment

./: README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/myapplication/: MainActivity.kt  MyGLRenderer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/myapplication/: TextureRenderer.kt
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  tsconfig.json
web/src/: main.ts
